need to pass domain to payment

--- a/index.html
+++ b/index.html
@@ -105,6 +105,22 @@
             value="10.00"
           />
         </div>
+        <!-- Checkbod for test transaction -->
+        <div class="mb-4">
+          <label
+            class="block text-gray-700 text-sm font-bold mb-2"
+            for="test_transaction"
+            >Test Transaction</label
+          >
+          <select
+            class="py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+            id="test_transaction"
+          >
+            <option value="true">True</option>
+            <option value="false">False</option>
+          </select>
+        </div>
+
         <div class="flex items-center justify-end">
           <!-- Modified: Changed justify-between to justify-end -->
           <div
